<resources>
    <string name="app_name">LoginChallengeOrt</string>
    <string name="welcome">Bienvenido</string>
    <string name="userName">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Login</string>
    <string name="is_password_lost">¿Perdiste tu contraseña?</string>
    <string name="register">¿No tienes cuenta? Registrate</string>
    <string name="go_back">Volver</string>
    <string name="sign_in">Registrarse</string>
    <string name="email">Email</string>
    <string name="login_option">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="sign_in_button">Sign In</string>
</resources>